# leci_3ano

./: .gitignore  README.md  aula1.py  aula2.py  requirements.txt
1semestre/SO/P/somm23-grp/src/: CMakeLists.txt  main.cpp
1semestre/SO/P/somm23-grp/src/core/sup/: probing.cpp
1semestre/SO/P/somm23-grp/src/frontend/: feq.cpp  mem.cpp  pct.cpp  sim.cpp  swp.cpp
1semestre/SO/P/somm23-grp/src/group/feq/: CMakeLists.txt  feq_close.cpp  feq_init.cpp  feq_insert.cpp  feq_pop.cpp  feq_print.cpp
1semestre/SO/P/somm23-grp/src/group/mem/: CMakeLists.txt  mem_alloc.cpp  mem_buddy_alloc.cpp  mem_buddy_free.cpp  mem_close.cpp  mem_ff_alloc.cpp  mem_ff_free.cpp  mem_free.cpp  mem_init.cpp  mem_print.cpp
1semestre/SO/P/somm23-grp/src/group/pct/: CMakeLists.txt  pct_close.cpp  pct_getters.cpp  pct_init.cpp  pct_insert.cpp  pct_print.cpp  pct_update_state.cpp
1semestre/SO/P/somm23-grp/src/group/sim/: CMakeLists.txt  sim_close.cpp  sim_fill.cpp  sim_get_process.cpp  sim_init.cpp  sim_load.cpp  sim_print.cpp  sim_run.cpp  sim_step.cpp
1semestre/SO/P/somm23-grp/src/group/swp/: CMakeLists.txt  swp_add.cpp  swp_close.cpp  swp_init.cpp  swp_peek.cpp  swp_print.cpp  swp_remove.cpp
PECI/: m2_oquedigo.docx
peci/: Captura2.csv  Captura2_Classific_Report.csv  Captura2_Conf_Matrix.json  Classific_Report.csv  FeatureExtraction.py  Grey Image (3).rar  SCENARIOS.docx  Utils.ipynb  Workplan.xlsx  inception.pptx  inception_oquedigo.docx  personas.docx  plot_cm.py  related_work.xlsx  results_analysis.py
peci/M1 - Milestones/: related_work.xlsx
tests/: test_aula1.py  test_aula2.py
(+1116 files in other folders)
